updated logo and fix right align on nav bar

--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,7 @@
     opacity: 0.6; 
     filter:(opacity=60);  
 }
+
+.topnav-right {
+    float: right;
+  }
